fixed mobile menu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@
 
 html{
     height: 100%;
+    overflow-x: hidden;
 }
 
 body{
